--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                 </font>
                 <br>
                 <p class="OurStory">
-                    In 2023, Team of 2 Students From Road to Code, had a simple dream: to make online food ordering and delivery easier.An online food delivery service that has since become one of the most successful businesses in the world. <br>
+                    I had a simple dream: to make online food ordering and delivery easier.An online food delivery service that has since become one of the most successful businesses in the world. <br>
+                    Meals can be ordered and delivered quickly without needing to leave home.Many platforms offer deals, discounts, and loyalty programs to attract and retain customers.
                     We had to make the process of ordering and delivering food easy. We created a platform that allowed users to order food from any restaurant in their city, with just a few clicks. We also had restaurant partners sign up for their service, so that orders could be placed directly with them. This was a major breakthrough, and today, The Chef Company is one of the most popular online food delivery services, with over 15 million users. 
                 </p>
             </div>
